--- a/join.html
+++ b/join.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <form action="">
-        아이디 <input type="text"><br>
-        비밀번호 <input type="password">
-        <input type="submit" value="로그인">
-    </form>
-</body>
+  </head>
+  <body>
+    <h1>회원가입 페이지입니다</h1>
+  </body>
 </html>
